fix heading clipping on narrow view width'

--- a/watched.css
+++ b/watched.css
@@ -1,6 +1,9 @@
 body {
+  max-width: 100vw;
   width: max-content;
   margin: 15px auto;
+  padding: 0 15px;
+  box-sizing: border-box;
   font-family: sans-serif;
   background-color: hsl(0deg 0% 16%);
   color: white;
@@ -25,7 +28,7 @@ a:active {
 
 /* h1 heading styling */
 h1{
-  width: max-content;
+  width: 100%;
   cursor: pointer;
   display: flex;
   align-items: center;
